Update src/main/java/uk/gov/hmcts/reform/professionalapi/controller/response/OrganisationUserResponse.java
Co-authored-by: abul-syed <130474274+abul-syed@users.noreply.github.com>